# four_in_a_row

./: .gitignore  .markdownlintignore  README.md
javascript/html5/: config.xml
javascript/html5/src/: LICENSE  README.md  index.html  manifest.json  manifest.webapp  manifest_hosted.webapp  package.json  sw.js  vitest.config.js
python/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  zensical.toml
python/doc/: docs_freshness.md  engine_alphabeta.md  engine_mcts.md  engine_minimax.md  engine_negamax.md  engine_random.md  engines.md  index.md  sgf.md  software_architecture.md
python/four_in_a_row/: __init__.py  __main__.py  ai_alphabeta.py  ai_mcts_ucb.py  ai_minimax.py  ai_negamax.py  ai_random.py  cli.py  constants.py  engines.py  game.py  gui.py  history.py  sgf.py  suggestion.py
python/scripts/: benchmark_minimax_negamax.py  check_docs_freshness.py  tournament.py
python/site/: 404.html  docs_freshness.html  engine_alphabeta.html  engine_mcts.html  engine_minimax.html  engine_negamax.html  engine_random.html  engines.html  index.html  search.json  sgf.html  software_architecture.html
python/tests/: __init__.py  engines_shared.py  test_cli.py  test_engine_alphabeta.py  test_engine_dispatch.py  test_engine_mcts.py  test_engine_minimax.py  test_engine_negamax_split.py  test_engine_random.py  test_game.py  test_history_and_sgf.py  test_negamax_module.py
python/tests/gui/: conftest.py  test_gui_ai_flow.py  test_gui_click_interaction.py  test_gui_config.py  test_gui_entrypoints.py  test_gui_post_game_prompt.py  test_gui_rendering.py
(+13 files in other folders)
