[project]
name = "four-in-a-row"
version = "0.1.0"
description = "Fully functional Four in a Row game with AI engines and SGF persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"matplotlib>=3.9",
]

[dependency-groups]
dev = [
	"flake8>=7.3.0",
	"mypy>=1.10",
	"pylint>=4.0.5",
	"pytest>=8.2",
	"pytest-cov>=5.0",
	"ruff>=0.6",
	"zensical>=0.0.34",
]

[project.scripts]
four-in-a-row = "four_in_a_row.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=four_in_a_row --cov-report=term-missing"
markers = [
	"fast: quick unit-level checks",
	"regression: broader integration or AI behavior checks",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["four_in_a_row"]

[tool.mypy]
python_version = "3.13"
files = ["four_in_a_row", "tests", "main.py", "scripts"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
pretty = true

[tool.pylint.main]
ignore = [".venv", "site"]

[tool.pylint.messages_control]
disable = [
	"too-few-public-methods",
	"too-many-arguments",
	"too-many-branches",
	"too-many-instance-attributes",
	"too-many-locals",
	"too-many-positional-arguments",
	"too-many-statements",
	"duplicate-code",
]
